FIX: Correct typo

--- a/articles/notes/2013-10-31-sipps.md
+++ b/articles/notes/2013-10-31-sipps.md
@@ -18,7 +18,7 @@ Most SIPPs allow you to select from a range of assets, such as:
 
 These aren’t all of the investment options that are available – different SIPP providers offer different investment options.
 
-## Who choose/manage the investment?
+## Who choose/manage the investments?
 
 - You
 - An authorised investment manager that you pay
