ADD: Add new tip in Git Tips notes to show the last commit date on every branches.

--- a/articles/notes/2012-01-17-git-tips.md
+++ b/articles/notes/2012-01-17-git-tips.md
@@ -84,3 +84,9 @@ If the remote branch you want to checkout is under "New remote branches" and not
 git remote update
 git checkout -b local-name origin/remote-name
 ```
+
+## Show the last commit date on every branches
+
+```bash
+git for-each-ref --sort='-authordate:iso8601' --format=' %(authordate:iso8601)%09%(refname)' refs
+```
